--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,21 +1,21 @@
 ---
+dependencies: []
+
 galaxy_info:
   author: "Xavier Binois"
-  description: "Create self-signed certificates with Ansible"
-  role_name: "certificates"
   namespace: "supertarto"
+  description: "Create self-signed certificates with Ansible, with or without your local CA. For test purpose."
+  role_name: "self_cert"
   license: "GNU General Public License v3.0"
-  min_ansible_version: 2.8
+  min_ansible_version: "2.19"
 
   platforms:
-    - name: "Debian"
+    - name: Debian
       versions:
-        - "buster"
-        - "bulleyes"
+        - bookworm
+        - trixie
 
   galaxy_tags:
     - security
     - openssl
     - certs
-
-dependencies: []
