--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,80 +1,15 @@
 ---
 - name: Converge
   hosts: all
-  roles:
-    - role: supertarto.certificates
-  vars:
-    cert_create_ca: true
-    cert_use_ownca: true
-    cert_use_self_signed: true
-    cert_ca_private_key:
-      - private_key_path: /etc/ssl/private/default_ca_key.key
-        size: 4096
-        type: RSA
-        owner: root
-        group: root
-        mode: "0600"
-
-    cert_ca_csr:
-      - path: /etc/ssl/private/default_ca_csr.csr
-        private_key_path: /etc/ssl/private/default_ca_key.key
-        country_name: FR
-        organization_name: ""
-        mail_address: ""
-        common_name: ""
-        owner: root
-        group: root
-        mode: "0640"
-        subject_alt_name: "IP:127.0.0.1"
-        basic_constraints:
-          - "CA:TRUE"
-
-    cert_ca_cert:
-      - path: /etc/ssl/certs/default_ca_cert.crt
-        private_key_path: /etc/ssl/private/default_ca_key.key
-        csr_path: /etc/ssl/private/default_ca_csr.csr
-        owner: root
-        group: root
-        mode: "0644"
-        provider: selfsigned
-
-    cert_private_key:
-      - private_key_path: /etc/ssl/private/default_cert_key.key
-        size: 4096
-        type: RSA
-        owner: root
-        group: root
-        mode: "0600"
-
-    cert_csr:
-      - path: /etc/ssl/private/default_cert_csr.csr
-        private_key_path: /etc/ssl/private/default_cert_key.key
-        country_name: FR
-        organization_name: ""
-        mail_address: ""
-        common_name: ""
-        owner: root
-        group: root
-        mode: "0640"
-        subject_alt_name: "IP:127.0.0.1"
-        basic_constraints:
-          - "CA:FALSE"
-
-    cert_cert:
-      - path: /etc/ssl/certs/default_cert.crt
-        private_key_path: /etc/ssl/private/default_cert_key.key
-        csr_path: /etc/ssl/private/default_cert_csr.csr
-        ca_path: "/etc/ssl/certs/default_ca_cert.crt"
-        ca_privatekey_path: "/etc/ssl/private/default_ca_key.key"
-        owner: root
-        group: root
-        mode: "0644"
-        provider: selfsigned
+  become: true
 
   pre_tasks:
-    - name: Update apt cache.
-      apt:
+    - name: Update apt cache
+      ansible.builtin.apt:
         update_cache: true
         cache_valid_time: 600
       when: ansible_os_family == 'Debian'
       changed_when: false
+
+  roles:
+    - role: .
