--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ name: CI
 
 defaults:
   run:
-    working-directory: 'supertarto.certificates'
+    working-directory: 'supertarto.self_cert'
 
 jobs:
 
@@ -19,44 +19,44 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the codebase.
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
-          path: 'supertarto.certificates'
+          path: 'supertarto.self_cert'
 
       - name: Set up Python 3.
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.13'
 
       - name: Install test dependencies.
-        run: pip3 install ansible yamllint ansible-lint
+        run: pip3 install yamllint
 
       - name: Lint code.
         run: |
           yamllint .
-          ansible-lint
+
   molecule:
     name: Molecule
     runs-on: ubuntu-latest
     strategy:
       matrix:
         distrib:
-          - debian10:latest
-          - debian11:latest
+          - debian12
+          - debian13
 
     steps:
       - name: Check out the codebase.
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
-          path: 'supertarto.certificates'
+          path: 'supertarto.self_cert'
 
       - name: Set up Python 3.
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.13'
 
       - name: Install test dependencies.
-        run: pip3 install ansible molecule[docker] docker
+        run: pip3 install ansible molecule-plugins[docker] docker
 
       - name: Run Molecule tests.
         run: molecule test
